--- a/SPRING/TFG-Patrones/src/main/resources/templates/patrones.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/patrones.html
@@ -51,8 +51,8 @@
             <tr th:each="patron : ${patrones}">
                 <td class="text-info"><span th:text="${patron.nombre}"></span></td>
                 <td><span th:text="${patron.resumen}"></span></td>
-                <td>   
-                    TODO (usar id)
+                <td>
+                    VER
                 </td>
             </tr>
         </tbody>
@@ -65,7 +65,6 @@
 <h6 class="row justify-content-md-center text-secondary">Proyecto programado por Adrian Ferrandis Homsi para un TFG de la UPV tutorizado por Vicente Pelechano</h6>
 
 <!-- SCRIPT-->
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
 </body>
