Creditos + Actualizacion navbar de todas + bugfix
bugfix: h1 -> h6 en VentanaPrincipal en el apartado de creditos

--- a/SPRING/TFG-Patrones/src/main/resources/templates/principal.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/principal.html
@@ -23,10 +23,10 @@
                     <a class="nav-link" href="www.google.es">Encuentra tu patr&oacuten</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="www.google.es">Patrones</a>
+                    <a class="nav-link" href="/patrones">Patrones</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="www.google.es">Creditos</a>
+                    <a class="nav-link" href="/creditos">Creditos</a>
                 </li>
             </ul>
         </div>
@@ -101,7 +101,7 @@
 <!-- CREDITOS-->
 </br>
 </br>
-<h6 class="row justify-content-md-center text-secondary">Proyecto programado por Adrian Ferrandis Homsi para un TFG de la UPV tutorizado por Vicente Pelechano</h1>
+<h6 class="row justify-content-md-center text-secondary">Proyecto programado por Adrian Ferrandis Homsi para un TFG de la UPV tutorizado por Vicente Pelechano</h6>
 
 <!-- SCRIPT-->
 
