--- a/SPRING/TFG-Patrones/src/main/resources/templates/patrones.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/patrones.html
@@ -7,30 +7,30 @@
 </head>
 <body style="background-color:#313131;">
 
-    <!-- NAVBAR-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
-        <a class="navbar-brand" href="#"> &nbsp; FINDPATTERN</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+<!-- NAVBAR-->
+<nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+    <a class="navbar-brand" href="#"> &nbsp; FINDPATTERN</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Inicio <span class="sr-only">(actual)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="www.google.es">Encuentra tu patr&oacuten</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="www.google.es">Patrones</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="www.google.es">Creditos</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Inicio <span class="sr-only">(actual)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="www.google.es">Encuentra tu patr&oacuten</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/patrones">Patrones</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/creditos">Creditos</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
     <!-- LISTA PATRONES-->
 </br>
