--- a/SPRING/TFG-Patrones/src/main/resources/templates/patron.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/patron.html
@@ -32,32 +32,31 @@
     </div>
 </nav>
 
-    <!-- LISTA PATRONES-->
+<!-- TITULO-->
+
+<div class="row justify-content-md-center">
+
+    <h1>
+        <span th:text="${patron.nombre}" th:remove="tag"></span>
+        <!-- <small th:text="${header.subtitle}" ></small>-->
+    </h1>
+
+    <!--
+    <h3>
+        <span th:text="${patron.descripcion}" th:remove="tag"></span>
+    </h3>
+    -->
+</div>
+
 </br>
 
-<div class = "row mx-auto">
-    <table class="text-white table table-responsive ">
-        <thead>
-            <tr>
-                <th> Patron </th>
-                <th> Informacion </th>
-                <th> Enlace </th>
-            </tr>
-        </thead>
-        <tbody>
-        <tr th:if="${patrones.empty}">
-                <td colspan="2"> Servicio de patrones no disponible </td>
-            </tr>
-            <tr th:each="patron : ${patrones}">
-                <td class="text-info"><span th:text="${patron.nombre}"></span></td>
-                <td><span th:text="${patron.resumen}"></span></td>
-                <td>
-                    <a href="somepage.html"  th:href="@{'/patron' (n=${patron.nombre})}">VER PATRÓN</a>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</div>
+
+
+<!-- INFO PATRON -->
+
+<!-- TODO Hacer una lectura de la lista que vaya cogiendo -->
+
+
 
 <!-- CREDITOS-->
 </br>
@@ -65,6 +64,7 @@
 <h6 class="row justify-content-md-center text-secondary">Proyecto programado por Adrian Ferrandis Homsi para un TFG de la UPV tutorizado por Vicente Pelechano</h6>
 
 <!-- SCRIPT-->
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
 </body>
