--- a/SPRING/TFG-Patrones/src/main/resources/templates/principal.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/principal.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Inicio <span class="sr-only">(actual)</span></a>
+                    <a class="nav-link" href="/home">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="www.google.es">Encuentra tu patr&oacuten</a>
