Arreglado bug de carga de UUID desde MongoDB

--- a/SPRING/TFG-Patrones/src/main/resources/templates/patron.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/patron.html
@@ -70,10 +70,11 @@
 
 <!-- INFO PATRON -->
 <hr class="my-4">
+<tr th:if="${!descripciones.empty}">
 <div class="col-md-6 offset-md-3">
     <h1 class=" text-info">Ejemplo real</h1>
 </div>
-
+</tr>
 
 </br>
 </br>
