--- a/SPRING/TFG-Patrones/src/main/resources/templates/encontrar-patron.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/encontrar-patron.html
@@ -20,7 +20,7 @@
                 <a class="nav-link" href="/home">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="www.google.es">Encuentra tu patr&oacuten</a>
+                <a class="nav-link" href="/encontrarPatron">Encuentra tu patr&oacuten</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/patrones">Patrones</a>
@@ -31,7 +31,7 @@
         </ul>
     </div>
 </nav>
-
+</nav>
 
 <!-- Tipos test -->
 </br>
