--- a/SPRING/TFG-Patrones/src/main/resources/templates/test-encontrar-patron.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/test-encontrar-patron.html
@@ -33,10 +33,50 @@
 </nav>
 
 
-<!-- LISTA PATRONES-->
+<!-- TEST-->
 </br>
-
-
+</br>
+<div class="text-white">
+    <div class="d-flex justify-content-center col">
+        <h3>Aqui aparece una pregunta del test</h3>
+    </div>
+    </br>
+    </br>
+    <div class="d-flex justify-content-center col">
+            <h6>Aceptación de la afirmación</h6>
+    </div>
+    <div class="d-flex justify-content-center col">
+        <h7>Poco conforme &nbsp; &nbsp;</h7>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+            <label class="form-check-label" for="inlineRadio1">1</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+            <label class="form-check-label" for="inlineRadio2">2</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" checked="checked">
+            <label class="form-check-label" for="inlineRadio3">3</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+            <label class="form-check-label" for="inlineRadio4">4</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
+            <label class="form-check-label" for="inlineRadio5">5</label>
+        </div>
+        <h7> &nbsp; &nbsp;Muy conforme</h7>
+    </div>
+    </br>
+    </br>
+    </br>
+    </br>
+    <div class="d-flex justify-content-center col">
+        <button type="button" class="btn btn-primary">Siguiente</button>
+    </div>
+</div>
 
 <!-- CREDITOS-->
 </br>
@@ -45,6 +85,5 @@
 
 <!-- SCRIPT-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-
 </body>
 </html>
