--- a/SPRING/TFG-Patrones/src/main/resources/templates/test-encontrar-patron.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/test-encontrar-patron.html
@@ -44,37 +44,39 @@
     <div class="d-flex justify-content-center col">
             <h6>Aceptación de la afirmación</h6>
     </div>
-    <div class="d-flex justify-content-center col">
-        <h7>Poco conforme &nbsp; &nbsp;</h7>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-            <label class="form-check-label" for="inlineRadio1">1</label>
+    <form action="/Encontrarpatron">
+        <div class="d-flex justify-content-center col">
+            <h7>Poco conforme &nbsp; &nbsp;</h7>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                <label class="form-check-label" for="inlineRadio1">1</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                <label class="form-check-label" for="inlineRadio2">2</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" checked="checked">
+                <label class="form-check-label" for="inlineRadio3">3</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+                <label class="form-check-label" for="inlineRadio4">4</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
+                <label class="form-check-label" for="inlineRadio5">5</label>
+            </div>
+            <h7> &nbsp; &nbsp;Muy conforme</h7>
         </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-            <label class="form-check-label" for="inlineRadio2">2</label>
+        </br>
+        </br>
+        </br>
+        </br>
+        <div class="d-flex justify-content-center col">
+            <button type="submit" class="btn btn-primary">Siguiente</button>
         </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" checked="checked">
-            <label class="form-check-label" for="inlineRadio3">3</label>
-        </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
-            <label class="form-check-label" for="inlineRadio4">4</label>
-        </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
-            <label class="form-check-label" for="inlineRadio5">5</label>
-        </div>
-        <h7> &nbsp; &nbsp;Muy conforme</h7>
-    </div>
-    </br>
-    </br>
-    </br>
-    </br>
-    <div class="d-flex justify-content-center col">
-        <button type="button" class="btn btn-primary">Siguiente</button>
-    </div>
+    </form>
 </div>
 
 <!-- CREDITOS-->
