Añadido random ID a todos los testPatrones y carga de texto de pregunta al test

--- a/SPRING/TFG-Patrones/src/main/resources/templates/test-encontrar-patron.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/test-encontrar-patron.html
@@ -37,12 +37,13 @@
 </br>
 <div class="text-white">
     <div class="d-flex justify-content-center col">
-        <h3>Aqui aparece una pregunta del test</h3>
+        <h3 th:text="${pregunta}"></h3>
+
     </div>
     </br>
     </br>
     <div class="d-flex justify-content-center col">
-            <h6>Aceptación de la afirmación</h6>
+            <h7>Aceptación de la afirmación</h7>
     </div>
     <form action="/Encontrarpatron">
         <div class="d-flex justify-content-center col">
