--- a/SPRING/TFG-Patrones/src/main/resources/templates/test-encontrar-patron.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/test-encontrar-patron.html
@@ -45,27 +45,27 @@
     <div class="d-flex justify-content-center col">
             <h7>Aceptación de la afirmación</h7>
     </div>
-    <form action="/Encontrarpatron">
+    <form action="">
         <div class="d-flex justify-content-center col">
             <h7>Poco conforme &nbsp; &nbsp;</h7>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                <input class="form-check-input" type="radio" name="opcion" id="inlineRadio1" value="1">
                 <label class="form-check-label" for="inlineRadio1">1</label>
             </div>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                <input class="form-check-input" type="radio" name="opcion" id="inlineRadio2" value="2">
                 <label class="form-check-label" for="inlineRadio2">2</label>
             </div>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" checked="checked">
+                <input class="form-check-input" type="radio" name="opcion" id="inlineRadio3" value="3" checked="checked">
                 <label class="form-check-label" for="inlineRadio3">3</label>
             </div>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+                <input class="form-check-input" type="radio" name="opcion" id="inlineRadio4" value="4">
                 <label class="form-check-label" for="inlineRadio4">4</label>
             </div>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
+                <input class="form-check-input" type="radio" name="opcion" id="inlineRadio5" value="5">
                 <label class="form-check-label" for="inlineRadio5">5</label>
             </div>
             <h7> &nbsp; &nbsp;Muy conforme</h7>
@@ -75,7 +75,7 @@
         </br>
         </br>
         <div class="d-flex justify-content-center col">
-            <button type="submit" class="btn btn-primary">Siguiente</button>
+            <button type="submit" class="btn btn-primary" >Siguiente</button>
         </div>
     </form>
 </div>
