--- a/SPRING/TFG-Patrones/src/main/resources/templates/patron.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/patron.html
@@ -44,11 +44,12 @@
 </div>
 </br>
 </br>
-<div class="col-md-6 offset-md-3">
-    <a class="btn btn-primary btn-md" href="#" role="button">¿Es util para mi problema?</a>
-</div>
 
-
+<tr th:if="!${descripciones.empty}">
+    <div class="col-md-6 offset-md-3">
+        <a class="btn btn-primary btn-md" href="#" role="button">¿Es util para mi problema?</a>
+    </div>
+</tr>
 
 
 <div class="row justify-content-md-center text-white">
