Solucionado error en carga de la base de datos

--- a/SPRING/TFG-Patrones/src/main/resources/templates/test-encontrar-patron.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/test-encontrar-patron.html
@@ -35,9 +35,9 @@
 <!-- TEST-->
 </br>
 </br>
-<div class="text-white">
-    <div class="d-flex justify-content-center col">
-        <h3 th:text="${pregunta}"></h3>
+<div class="text-light">
+    <div class="d-flex justify-content-center text-white">
+        <h5 th:text="${pregunta}"></h5>
 
     </div>
     </br>
