Cambios en varias clases que afectan al funcionamiento de la carga de informacion general

--- a/SPRING/TFG-Patrones/src/main/resources/templates/principal.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/principal.html
@@ -38,7 +38,7 @@
       <div class="jumbotron">
           <h1 class="display-5">Trabaja con patrones de diseño de una forma mas simple</h1>
           <hr class="my-4">
-          <p class="lead" th:text="'Ofrecemos distintos recursos que facilitan el trabajo y el estudio de ' + ${patrones.numeroPatrones} + ' patrones distintos.'"  />
+          <p class="lead" th:text="'Ofrecemos distintos recursos que facilitan el trabajo y el estudio de ' + ${numeroPatrones} + ' patrones distintos.'"  />
           <p>¿Quieres buscar si existe un patrón para solucionar tu problema de diseño?</p>
           <p class="lead">
             <a class="btn btn-primary btn-lg" href="#" role="button">Buscar Patron</a>
