Eliminado DAO (Deperecated)

--- a/SPRING/TFG-Patrones/src/main/resources/templates/encontrar-patron.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/encontrar-patron.html
@@ -33,7 +33,7 @@
 </nav>
 </nav>
 
-<!-- Tipos test -->
+<!-- Tipos cuestionario -->
 </br>
 <h2 class="row justify-content-md-center text-white">Elige la categoría en la que encaja tu patrón</h2>
 </br>
