--- a/SPRING/TFG-Patrones/src/main/resources/templates/patrones.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/patrones.html
@@ -3,7 +3,13 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>FINDPATTERN</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body style="background-color:#313131;">
 
@@ -36,28 +42,30 @@
     <!-- LISTA PATRONES-->
 </br>
 
-<div class = "row mx-auto">
-    <table class="text-white table table-responsive ">
-        <thead>
-            <tr>
-                <th> Patron </th>
-                <th> Informacion </th>
-                <th> Enlace </th>
-            </tr>
-        </thead>
-        <tbody>
-        <tr th:if="${patrones.empty}">
-                <td colspan="2"> Servicio de patrones no disponible </td>
-            </tr>
-            <tr th:each="patron : ${patrones}">
-                <td class="text-info"><span th:text="${patron.nombre}"></span></td>
-                <td><span th:text="${patron.resumen}"></span></td>
-                <td>
-                    <a href="somepage.html"  th:href="@{'/patron' (n=${patron.nombre})}">VER PATRÓN</a>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+<div class="row justify-content-center">
+    <div class = "col-auto">
+        <table class="text-white table table-responsive ">
+            <thead>
+                <tr>
+                    <th> Patron </th>
+                    <th> Informacion </th>
+                    <th> Enlace </th>
+                </tr>
+            </thead>
+            <tbody>
+            <tr th:if="${patrones.empty}">
+                    <td colspan="2"> Servicio de patrones no disponible </td>
+                </tr>
+                <tr th:each="patron : ${patrones}">
+                    <td class="text-info"><span th:text="${patron.nombre}"></span></td>
+                    <td><span th:text="${patron.resumen}"></span></td>
+                    <td>
+                        <a href="somepage.html"  th:href="@{'/patron' (n=${patron.nombre})}">VER PATRÓN</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 
 <!-- CREDITOS-->
@@ -66,7 +74,7 @@
 <h6 class="row justify-content-md-center text-secondary">Proyecto programado por Adrian Ferrandis Homsi para un TFG de la UPV tutorizado por Vicente Pelechano</h6>
 
 <!-- SCRIPT-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 </body>
 </html>
