--- a/SPRING/TFG-Patrones/src/main/resources/templates/test-encontrar-patron.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/test-encontrar-patron.html
@@ -3,7 +3,12 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>FINDPATTERN</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body style="background-color:#313131;">
 
@@ -36,18 +41,26 @@
 </br>
 </br>
 <div class="text-light">
-    <div class="d-flex justify-content-center text-white">
-        <h5 th:text="${pregunta}"></h5>
+    <div class="d-flex justify-content-center">
+
+
+        <div class="card bg-dark">
+            <div class="card-body background-color:#313131;">
+                <p class="card-text font-weight-bold background-color:#313131;"  th:text="${pregunta}"></p>
+            </div>
+        </div>
 
     </div>
+
     </br>
     </br>
     <div class="d-flex justify-content-center col">
             <h7>Aceptación de la afirmación</h7>
     </div>
+    <div class="d-flex justify-content-center col">
     <form action="">
-        <div class="d-flex justify-content-center col">
-            <h7>Poco conforme &nbsp; &nbsp;</h7>
+
+            <h7>Poco conforme &nbsp;</h7>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="opcion" id="inlineRadio1" value="1">
                 <label class="form-check-label" for="inlineRadio1">1</label>
@@ -68,8 +81,8 @@
                 <input class="form-check-input" type="radio" name="opcion" id="inlineRadio5" value="5">
                 <label class="form-check-label" for="inlineRadio5">5</label>
             </div>
-            <h7> &nbsp; &nbsp;Muy conforme</h7>
-        </div>
+            <h7> Muy conforme</h7>
+
         </br>
         </br>
         </br>
@@ -78,6 +91,7 @@
             <button type="submit" class="btn btn-primary" >Siguiente</button>
         </div>
     </form>
+    </div>
 </div>
 
 <!-- CREDITOS-->
@@ -86,6 +100,8 @@
 <h6 class="row justify-content-md-center text-secondary">Proyecto programado por Adrian Ferrandis Homsi para un TFG de la UPV tutorizado por Vicente Pelechano</h6>
 
 <!-- SCRIPT-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+
 </body>
 </html>
