Corregida proporcion en pantalla de Sinergias/Documentacion

--- a/SPRING/TFG-Patrones/src/main/resources/templates/patron.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/patron.html
@@ -56,38 +56,39 @@
 
 
 <!--  SINERGIAS/DOCUMENTACION -->
-<div class="container text-white col-md-6 offset-md-3">
-    <div class="row">
-        <div class="col">
-            <div th:if="!${documentacion.empty}">
-                <div class="col-md-6 offset-md-3">
-                    <h5 class="text-info">Enlaces a documentacion</h5>
-                </div>
-                <br>
-                <ul class="nav">
-                    <div th:each="referencia : ${documentacion}">
-                        <li class="nav-item">
-                            <a class="nav-link active" target="_blank" href="somepage.html" th:href="@{'' + ${referencia}}">Consultar</a>
-                        </li>
-                    </div>
-                </ul>
-            </div>
-        </div>
 
-        <div class="col">
+<hr class="bg-light my-4">
+<div class="container text-white ">
+    <div class="row">
+
+        <div class="col-8">
             <div th:if="!${sinergias.empty}">
-                <div class="col-md-6 offset-md-3">
+                <div class="col">
                     <h5 class="text-info">Sinergias</h5>
                     <br>
                 </div>
-                <ul class="nav">
+
                     <div th:each="referencia : ${sinergias}">
                         <h5 th:text="${referencia}"></h5>
                         <br>
                     </div>
-                </ul>
+
             </div>
         </div>
+
+        <div class="col-4">
+            <div th:if="!${documentacion.empty}">
+                <div class="col">
+                    <h5 class="text-info">Documentación</h5>
+                </div>
+                <br>
+                    <div th:each="referencia, iterStat : ${documentacion}">
+
+                            <a  class="fs-4 nav-link active" target="_blank" href="somepage.html" th:href="@{'' + ${referencia}}" th:text="@{${nombreDocumentacion[iterStat.index]}}" >Consultar</a>
+                    </div>
+            </div>
+        </div>
+
     </div>
 </div>
 
@@ -110,7 +111,7 @@
 
 
 <!-- INFO PATRON -->
-<hr class="my-4">
+<hr class="bg-light my-4">
 <tr th:if="${!descripciones.empty}">
 <div class="col-md-6 offset-md-3">
     <h1 class=" text-info">Ejemplo real</h1>
