Añadido parseo de Patrones a formato usuario-
Falta documentacion

--- a/SPRING/TFG-Patrones/src/main/resources/templates/admin/patrones.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/admin/patrones.html
@@ -45,8 +45,8 @@
 
 <!-- INFORMACION -->
 
-<h3 class="text-center text-warning pt-5">Preguntas</h3>
-<p class="text-center text-white pt-4">A continuación se muestran todos los campos que tiene una pregunta. Despues una lista de preguntas donde se pueden editar todas las preguntas de la aplicación. Al pulsar actualizar se eliminaran las existentes y se actualizaran con la nueva versión.</p>
+<h3 class="text-center text-warning pt-5">Patrones</h3>
+<p class="text-center text-white pt-4">A continuación se muestran todos los campos que tiene un patrón. Despues una lista de patrones donde se pueden editar todas las preguntas de la aplicación. Al pulsar actualizar se eliminaran las existentes y se actualizaran con la nueva versión.</p>
 </br>
 
 <!-- DEFINICION -->
@@ -85,7 +85,6 @@
             </br>
             <textarea class="form-control bg-secondary" id="exampleFormControlTextarea1" rows="30" th:field="*{texto}">
             </textarea>
-            <!-- antes estaba en el textArea (dentro)[[${preguntas}]]-->
             </br>
             <input type="submit" class="btn btn-primary" />
         </form>
